# flat

./: Cargo.toml  LICENSE  PDR.md  README.md  RELEASING.md  install.sh
.github/workflows/: release.yml
scripts/: bench.sh
src/: compress.rs  config.rs  filters.rs  lib.rs  main.rs  output.rs  parse.rs  priority.rs  tokens.rs  walker.rs
tests/: integration_test.rs
tests/fixtures/js_project/: .gitignore  README.md  package-lock.json  package.json
tests/fixtures/js_project/config/: secrets.json  webpack.config.js
tests/fixtures/js_project/public/: index.html
tests/fixtures/js_project/src/: index.js
tests/fixtures/js_project/src/components/: Button.jsx  Header.jsx
tests/fixtures/js_project/src/utils/: helpers.js  validators.js
tests/fixtures/js_project/tests/unit/: helpers.test.js
tests/fixtures/sample_project/: .env  .env.local  .gitignore  Cargo.toml  README.md  credentials.json  large_file.txt
tests/fixtures/sample_project/assets/: data.csv
tests/fixtures/sample_project/docs/: README.md  guide.md
tests/fixtures/sample_project/src/: config.toml  utils.rs
tests/fixtures/sample_project/tests/: integration_test.rs  test_data.json
tests/fixtures/snapshot/: expected_go.txt  expected_py.txt  expected_rs.txt  expected_ts.txt  sample.go  sample.py  sample.rs  sample.ts
