[package]
name = "flat"
version = "0.1.2"
edition = "2021"
authors = ["zkoranges"]
license = "MIT"
description = "Flatten codebases into AI-friendly format"
repository = "https://github.com/zkoranges/flat"
readme = "README.md"
keywords = ["cli", "ai", "code", "flatten", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
walkdir = "2.5"
anyhow = "1.0"
content_inspector = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
