[package]
name = "flat"
version = "0.2.0"
edition = "2021"
authors = ["zkoranges"]
license = "MIT"
description = "Flatten codebases into AI-friendly format"
repository = "https://github.com/zkoranges/flat"
readme = "README.md"
keywords = ["cli", "ai", "code", "flatten", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
walkdir = "2.5"
anyhow = "1.0"
content_inspector = "0.2"
globset = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
